Added post-receive keyword.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fh/git-deployment",
     "description": "Server side gitolite post-receive deployment hooks for git projects.",
-    "keywords": ["deployment", "git", "ssh", "gitolite", "hooks", "deploy", "unit", "testable", "test", "customizable", "strategy", "phar"],
+    "keywords": ["deployment", "git", "ssh", "gitolite", "hooks", "deploy", "unit", "testable", "test", "customizable", "strategy", "phar", "post-receive"],
     "require": {
         "naneau/semver": "dev-master#c771ad1e6c89064c0a4fa714979639dc3649d6c8"
     },
